0.3.0:
- Added RewritingContext.retarget_symbol, which allows adjusting code/data
  references of one symbol to use another synmbol instead. For example, you
  could redirect all calls to specific internal symbol to a trap function.

0.2.0:
- CFI directives are now preserved, allowing rewriting of C++ programs with
  exception handling. Additionally, patches can specify CFI directives.
- gtirb-rewriting now requires Python 3.7.
- OffsetMapping.__setitem__'s behavior changed when indexing by an element. It
  assigns the passed MutableMapping to the internal storage instead of creating
  a copy, which makes setdefault more intuitive.
  asssigns the passed dict to the internal storage instead of creating a copy,
  which makes setdefault more intuitive.
- Added a dwarf submodule to make creating CFI directives easier.
- Assembler's ignore_cfi_directives parameter has been removed.

0.1.2:
- Updated GTIRB symbolic expression attributes.

0.1.1:
- Added support for ELF symbol type, binding, and visibility
- Added support for symbols with absolute addresses using .set
- Added support for the .zero directive
- Added support for sym-sym symbolic expressions
- Added support for the .uleb128 and .sleb128 directives
- Removed inference of the GOTPCREL symbolic attribute, which cannot be done
  correctly in all cases

0.1.0:
- gtirb-rewriting now requires gtirb 1.10.6.
- Refactored the code that applies modifications to support future changes and
  ease maintenance
- OffsetMapping.__setitem__'s behavior changed when indexing by an element. It
  now behaves as an assignment instead of an update, meaning that it may
  actually shrink the map in some cases. See the docstring for more examples.
- Added support for the .align directive
- The sectionProperties aux data table is now populated when patches add new
  sections.
- Added support for deletions using delete_at
- Functions are no longer needed for insert_at and replace_at. New overloads